# California-Housing-Prediction

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  train_model.py
notebooks/: california_housing_analysis.ipynb
src/: __init__.py  config.py  main.py  train.py
